--- a/sample_inceptionv3_from_ckpt.ipynb
+++ b/sample_inceptionv3_from_ckpt.ipynb
@@ -20,7 +20,7 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
-    "from inceptionv2 import InceptionV2\n",
+    "from inceptionv3 import InceptionV3\n",
     "from utils import ImageDataGenerator"
    ]
   },
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "train_layers = [\"Conv2d_1c_1x1\"]\n",
+    "train_layers = [\"Conv2d_1c_1x1\", \"Conv2d_2b_1x1\"]\n",
     "class_dic = {\n",
     "    0: \"bus\",\n",
     "    1: \"dinosaurs\",\n",
@@ -41,7 +41,7 @@
     "}\n",
     "\n",
     "# Initialize model\n",
-    "inceptionv2 = InceptionV2(num_classes=5, train_layers=train_layers, model=\"test\")"
+    "inceptionv3 = InceptionV3(num_classes=5, train_layers=train_layers, model=\"test\")"
    ]
   },
   {
@@ -61,7 +61,7 @@
     "sess = tf.Session()\n",
     "sess.run(tf.global_variables_initializer())\n",
     "saver = tf.train.Saver(var_list=tf.global_variables())\n",
-    "model_file = tf.train.latest_checkpoint(\"./runs/inceptionv2/1544503031/ckpt/\")\n",
+    "model_file = tf.train.latest_checkpoint(\"./runs/inceptionv3/1544503031/ckpt/\")\n",
     "saver.restore(sess, model_file)"
    ]
   },
@@ -110,8 +110,8 @@
     "img = cv2.cvtColor(img, cv2.COLOR_RGB2BGR)\n",
     "img = img.reshape((1, 224, 224, 3))\n",
     "\n",
-    "probs = sess.run(inceptionv2.probability, feed_dict={inceptionv2.x_input: img,\n",
-    "                                                     inceptionv2.keep_prob: 1.0}\n",
+    "probs = sess.run(inceptionv3.probability, feed_dict={inceptionv3.x_input: img,\n",
+    "                                                     inceptionv3.keep_prob: 1.0}\n",
     "                )\n",
     "\n",
     "class_name = class_dic[np.argmax(probs)]\n",
