--- a/sample_inceptionv1_from_ckpt.ipynb
+++ b/sample_inceptionv1_from_ckpt.ipynb
@@ -20,7 +20,7 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
-    "from inceptionv1 import InceptionV1\n",
+    "from model_inceptionv1 import InceptionV1\n",
     "from utils import ImageDataGenerator"
    ]
   },
