--- a/sample_inceptionv2_from_ckpt.ipynb
+++ b/sample_inceptionv2_from_ckpt.ipynb
@@ -20,7 +20,7 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
-    "from inceptionv2 import InceptionV2\n",
+    "from model_inceptionv2 import InceptionV2\n",
     "from utils import ImageDataGenerator"
    ]
   },
