--- a/sample_inceptionv3_from_ckpt.ipynb
+++ b/sample_inceptionv3_from_ckpt.ipynb
@@ -20,7 +20,7 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
-    "from inceptionv3 import InceptionV3\n",
+    "from model_inceptionv3 import InceptionV3\n",
     "from utils import ImageDataGenerator"
    ]
   },
