--- a/sample_vgg16_from_ckpt.ipynb
+++ b/sample_vgg16_from_ckpt.ipynb
@@ -20,7 +20,7 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
-    "from vgg16 import Vgg16\n",
+    "from model_vgg16 import Vgg16\n",
     "from utils import ImageDataGenerator"
    ]
   },
