--- a/sample_inceptionv4_from_ckpt.ipynb
+++ b/sample_inceptionv4_from_ckpt.ipynb
@@ -41,7 +41,7 @@
     "}\n",
     "\n",
     "# Initialize model\n",
-    "inceptionv4 = InceptionV4(num_classes=5, train_layers=train_layers, model=\"test\")"
+    "inceptionv4 = InceptionV4(num_classes=5, train_layers=train_layers)"
    ]
   },
   {
