--- a/sample_vgg16_from_ckpt.ipynb
+++ b/sample_vgg16_from_ckpt.ipynb
@@ -41,7 +41,7 @@
     "}\n",
     "\n",
     "# Initialize model\n",
-    "vgg16 = Vgg16(num_classes=5, train_layers=train_layers, model=\"test\")"
+    "vgg16 = Vgg16(num_classes=5, train_layers=train_layers)"
    ]
   },
   {
