--- a/sample_vgg19_from_ckpt.ipynb
+++ b/sample_vgg19_from_ckpt.ipynb
@@ -41,7 +41,7 @@
     "}\n",
     "\n",
     "# Initialize model\n",
-    "vgg19 = Vgg19(num_classes=5, train_layers=train_layers, model=\"test\")"
+    "vgg19 = Vgg19(num_classes=5, train_layers=train_layers)"
    ]
   },
   {
